@@ -453,6 +453,8 @@ removeInvalidLinksAction.Action.accelerator=shortcut DELETE
 #column '?' tooltip
 checkedColumnTooltip=URL validation
 
+refreshProxyList.text=Refresh proxy list
+
 
 ##Cut&Copy actions
 cut.Action.text = Cu&t
