@@ -12,3 +12,4 @@ InsertCaptcha=Insert Captcha
 FileIsPasswordProtected=%s\nThis file is password protected.\nPlease enter the password:
 InsertPassword=Insert Password
 ErrorDuringDownload=Error during download.\nStream was closed unexpectedly.\nFile is not complete
+fileAlreadyExistsTooltip=File already exists on the disk
